--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^3.15.1",
     "fastify": "^3.0.0",
-    "fastify-plugin": "^3.0.0",
     "fastify-autoload": "^3.10.0",
-    "fastify-sensible": "^3.1.2",
-    "fastify-cli": "^2.15.0"
+    "fastify-plugin": "^3.0.0",
+    "fastify-sensible": "^3.1.2"
   },
   "devDependencies": {
+    "fastify-cli": "^2.15.0",
+    "prisma": "^3.15.1",
     "tap": "^15.1.6"
   }
 }
