--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mcu-api",
   "version": "1.0.0",
-  "description": "This project was bootstrapped with Fastify-CLI.",
+  "description": "",
   "main": "app.js",
   "directories": {
     "test": "test"
@@ -15,15 +15,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^3.15.1",
+    "@prisma/client": "^3.15.2",
     "fastify": "^3.0.0",
     "fastify-autoload": "^3.10.0",
     "fastify-plugin": "^3.0.0",
-    "fastify-sensible": "^3.1.2"
+    "fastify-sensible": "^3.1.2",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "fastify-cli": "^2.15.0",
-    "prisma": "^3.15.1",
+    "prisma": "^3.15.2",
     "tap": "^15.1.6"
   }
 }
