--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@
 PORT= 5000
 
 # DATABASE_URL
-DATABASE_URL="postgresql://mario:mario123@localhost:5432/mcu_data?schema=public"
+DATABASE_URL="postgresql://mario:mario123@localhost:5432/mcu?schema=public"
